# QuanserControllerShield

./: .gitignore  CMakeLists.txt  README.md  micros.pdsprj
doc/: doxygen_config
doc/html/: Decoder_8h.html  Decoder_8h_source.html  MicroSwitches_8h_source.html  Motor_8h_source.html  PIDController_8h_source.html  QuanserControllerShield_8h_source.html  annotated.html  classDecoder-members.html  classDecoder.html  classMicroSwitches-members.html  classMicroSwitches.html  classMotor-members.html  classMotor.html  classPIDController-members.html  classPIDController.html  classQuanserControllerShield-members.html  classQuanserControllerShield.html  classes.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  galileo2io_8h_source.html  index.html  md_README.html  md__home_gabriel_CLionProjects_QuanserControllerShield_README.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  (+2 more)
doc/latex/: Decoder_8h.tex  annotated.tex  classDecoder.tex  classMicroSwitches.tex  classMotor.tex  classPIDController.tex  classQuanserControllerShield.tex  files.tex  index.tex  md_README.tex  md__home_gabriel_CLionProjects_QuanserControllerShield_README.tex  refman.tex
include/: Decoder.h  MicroSwitches.h  Motor.h  PIDController.h  QuanserControllerShield.h  galileo2io.h  microswitch.h
init.d/: quanser_init  quanser_init.sh
lib/: Decoder.cpp  MicroSwitches.cpp  Motor.cpp  PIDController.cpp  QuanserControllerShield.cpp  galileo2io.cpp
pcb/: Bill Of Materials QuanserControllerShield.txt  QuanserControllerShield.SDF  QuanserControllerShield.pdsprj
pcb/decoder/: decoder.pdsprj
pcb/h-bridge/: hbridge.pdsprj
pcb/inverter/: inverter.pdsprj
pcb/microswitch/: microswitch.pdsprj
src/: Decoder.cpp  Decoder.h  Makefile  MicroSwitches.cpp  MicroSwitches.h  Motor.cpp  QuanserControllerShield.cpp  QuanserControllerShield.h  microswitch.c  microswitch.h  motor.c  motor.h  sensor_fim_de_curso.c
test/: decoder_test.cpp  move_test.cpp  pwm_test.cpp  test.cpp
